# paagh_vest

./: .cproject  .gitignore  .mxproject  .project  README.md  language.settings.xml  pulse_test_2.ioc  pulse_test_2.launch  stm32cubeide.project.prefs  test_sensor_3 Debug.launch  test_sensor_3.ioc
.github/workflows/: main.yml
.metadata/: .log4j2.xml  version.ini
Core/Inc/: gpio.h  i2c.h  usart.h
Core/Src/: gpio.c  i2c.c  main.c  stm32l0xx_hal_msp.c  usart.c
Debug/: makefile  objects.list  pulse_test_2.elf  pulse_test_2.list  pulse_test_2.map  test_sensor_3.elf  test_sensor_3.list  test_sensor_3.map
IDE_nadajnik_pcb/: .mxproject  .project
IDE_nadajnik_pcb/Debug/: sensory_v2.elf  sensory_v2.list  sensory_v2.map
IDE_nadajnik_pcb/sensory_v2/: .cproject  sensory_v2 Debug.launch
IDE_odbiornik_STM32_Nucleo_L0/: .mxproject  sensory Debug.launch
IDE_odbiornik_STM32_Nucleo_L0/Debug/: objects.list  sensory.list  sensory.map
IDE_odbiornik_STM32_Nucleo_L0/sensory/: .cproject  sensory.ioc
hardware/board_v0.0.1/: #auto_saved_files#  README.md  _autosave-shield_v0.0.1.kicad_sch  board_v0.0.1.kicad_prl  board_v0.0.1.kicad_pro  board_v0.0.1.kicad_sch  fp-info-cache  fp-lib-table  shield_v0.0.1.kicad_pcb  shield_v0.0.1.kicad_prl  shield_v0.0.1.kicad_pro  shield_v0.0.1.kicad_sch  sym-lib-table  ~shield_v0.0.1.kicad_pcb.lck
hardware/shield_v0.0.1/: README.md
kamizelka_sens/: PCB1.PcbDoc  Sheet1-altium-import.kicad_sym  Sheet1.SchDoc  kamizelka_sens.PrjPcb
kamizelka_sens/__Previews/: Sheet1.SchDocPreview
paagh_vest/: .mxproject  CMakeLists.txt  paagh_vest.ioc
paagh_vest/cmake/stm32cubemxUserSrc/: CMakeLists.txt
sensory/: .cproject  .mxproject  .project  sensory Debug.launch  sensory.ioc
sensory/Debug/: makefile  objects.list  sensory.elf  sensory.list  sensory.map
sensory_v2/: .cproject  STM32L071KBTX_FLASH.ld  sensory_v2 Debug.launch  sensory_v2.ioc
sensory_v2/Debug/: makefile  sources.mk  (+5 more)
src/: .mxproject  CMakeLists.txt  Makefile  STM32-for-VSCode.config.yaml  STM32L071KBTx_FLASH.ld  STM32Make.make  openocd.cfg  paagh_vest.ioc  paagh_vest_v2.ioc
src/cmake/stm32cubemx/: CMakeLists.txt
(+427 files in other folders)
